<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/app_icon" />

    <EditText
        android:id="@+id/main_url"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/main_url_hint" />

    <EditText
        android:id="@+id/main_user_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/main_user_name_hint" />

    <EditText
        android:id="@+id/main_psd"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/main_psd_hint" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/main_login_btn"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/main_login" />

        <Button
            android:id="@+id/main_logout_btn"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/main_logout" />

    </LinearLayout>


    <Button
        android:id="@+id/main_url_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_direct_url" />

    <Button
        android:id="@+id/main_video_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_record_play" />
</LinearLayout>
